resolved z-index bug with close button

--- a/src/components/NavCard.module.css
+++ b/src/components/NavCard.module.css
@@ -39,12 +39,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-weight: 300;
     margin-right: 4px;
-
 }
 
 .boton {
+    z-index: 2;
     display: none;
     opacity: 80%;
     border-radius: 50%;
@@ -68,7 +67,7 @@
 
 .link {
     display: inline;
-    font-weight: 600;
+    font-weight: 500;
     border-top: 1px solid rgba(255, 255, 255, 0.8);
     border-bottom: 1px solid rgba(255, 255, 255, 0.8);
     border-left: 1px solid rgba(255, 255, 255, 0.8);
@@ -78,6 +77,7 @@
 }
 
 .tempOrButton {
+    font-weight: 300;
     height: 100%;
     width: 28%;
     display: flex;
